--- a/family-tree/src/app/module/banner/banner.component.html
+++ b/family-tree/src/app/module/banner/banner.component.html
@@ -1,11 +1,11 @@
 <div #container class="box-image">
   <carousel
-    class="h-[700px] w-full mx-auto"
+    class="mx-auto"
     [images]="images"
     [cellsToShow]="1"
     [loop]="true"
-    [height]="(container.offsetWidth - 300) * 0.5"
-    [width]="container.offsetWidth - 145"
+    [height]="(container.offsetWidth - 350) * 0.5"
+    [width]="container.offsetWidth - 350"
     [autoplay]="true"
     [autoplayInterval]="5000">
   </carousel>
