--- a/family-tree/src/app/module/family-tree/family-tree.component.html
+++ b/family-tree/src/app/module/family-tree/family-tree.component.html
@@ -1,8 +1,8 @@
 <div class="box-genealogy px-[72px] mx-auto">
   <div class="random-image3" id="image3"></div>
   <div class="random-image1" id="image1"></div>
-  <img src="assets/images/family_tree/banner-tree.png" width="100%" height="373px" alt="">
-  <div class="search-container pt-[30px] justify-center ">
+  <img src="assets/images/family_tree/banner-tree.png" class="w-10/12 mx-auto" alt="">
+  <div class="search-container pt-[30px] justify-center">
     <div class="input-container">
       <p class="hint-content">Ala</p>
       <input type="text" [(ngModel)]="searchTerm" (input)="onSearch()" placeholder="" />
@@ -26,15 +26,103 @@
       </ul>
     </div>
   </div>
-  <div class="select-container">
-    <select id="options" (click)="onSelectClick()">
-      <label>Đời</label>
-      <option value="option1">Đời 1</option>
-      <option value="option2">Đời 2</option>
-      <option value="option3">Đời 3</option>
-      <option value="option4">Đời 4</option>
-    </select>
+  <div class="w-6/12 h-auto my-[30px] mx-auto">
+    <mat-form-field appearance="outline" class="custom-field">
+      <mat-label>Đời</mat-label>
+      <mat-select required panelClass="select-style">
+        <mat-option disableRipple>Đời</mat-option>
+        <mat-option value="generation1">Đời 1</mat-option>
+        <mat-option value="generation2">Đời 2</mat-option>
+        <mat-option value="generation3">Đời 3</mat-option>
+        <mat-option value="generation4">Đời 4</mat-option>
+      </mat-select>
+    </mat-form-field>
   </div>
-  <div></div>
+
+  <div class="statistics-overview">
+    <div class="bg-statistics w-9/12 px-[72px] mx-auto my-[40px] ">
+      <div class="uppercase text-4xl text-[#9E2B25] font-[500] text-center pt-[40px] pb-[20px]">Thống kê tổng quan</div>
+      <div class="count-statistics flex pb-[25px]">
+        <div class="flex w-2/12 h-auto mr-[10px]">
+          <img src="assets/images/family_tree/dong_xu.png" class="w-[10px] h-[10px] mt-[7px] mr-[5px]" alt="">
+          <div class="flex text-black font-semibold text-base font-[Averta4] text-center">Số đời: <div class="px-[4px] text-[#9E2B25]">4</div> đời</div>
+        </div>
+        <div class="w-4/12 h-auto">
+          <div class="flex">
+            <img src="assets/images/family_tree/dong_xu.png" class="w-[10px] h-[10px] mt-[7px] mr-[5px]" alt="">
+            <div class="flex text-black font-semibold text-base font-[Averta4] text-center">Tổng số người: <div class="px-[4px] text-[#9E2B25]">486</div>người</div>
+          </div>
+          <div class="box-gender flex ml-[3px]">
+            <div class="w-1 h-1 bg-black rounded-full my-auto mr-[10px]"></div>
+            <div class="flex text-black font-normal text-base font-[Averta12]">Tổng nam: <div class="px-[4px] text-[#9E2B25]">216</div>người</div>
+          </div>
+          <div class="box-gender flex ml-[3px]">
+            <div class="w-1 h-1 bg-black rounded-full my-auto mr-[10px]"></div>
+            <div class="flex text-black font-normal text-base font-[Averta12]">Tổng nữ:<div class="px-[4px] text-[#9E2B25]">270</div>người</div>
+          </div>
+        </div>
+        <div class="w-3/12 h-auto">
+          <div class="flex">
+            <img src="assets/images/family_tree/dong_xu.png" class="w-[10px] h-[10px] mt-[7px] mr-[5px]" alt="">
+            <div class="flex text-black font-semibold text-base font-[Averta4] text-center">Đời 1:<div class="px-[4px] text-[#9E2B25]">27</div>người</div>
+          </div>
+          <div class="box-gender flex ml-[3px]">
+            <div class="w-1 h-1 bg-black rounded-full my-auto mr-[10px]"></div>
+            <div class="flex text-black font-normal text-base font-[Averta12]">Tổng nam:<div class="px-[4px] text-[#9E2B25]">13</div>người</div>
+          </div>
+          <div class="box-gender flex ml-[3px]">
+            <div class="w-1 h-1 bg-black rounded-full my-auto mr-[10px]"></div>
+            <div class="flex text-black font-normal text-base font-[Averta12]">Tổng nữ:<div class="px-[4px] text-[#9E2B25]">14</div>người</div>
+          </div>
+        </div>
+        <div class="w-3/12 h-auto">
+          <div class="flex">
+            <img src="assets/images/family_tree/dong_xu.png" class="w-[10px] h-[10px] mt-[7px] mr-[5px]" alt="">
+            <div class="flex text-black font-semibold text-base font-[Averta4] text-center">Đời 2:<div class="px-[4px] text-[#9E2B25]">70</div>người</div>
+          </div>
+          <div class="box-gender flex ml-[3px]">
+            <div class="w-1 h-1 bg-black rounded-full my-auto mr-[10px]"></div>
+            <div class="flex text-black font-normal text-base font-[Averta12]">Tổng nam:<div class="px-[4px] text-[#9E2B25]">30</div>người</div>
+          </div>
+          <div class="box-gender flex ml-[3px]">
+            <div class="w-1 h-1 bg-black rounded-full my-auto mr-[10px]"></div>
+            <div class="flex text-black font-normal text-base font-[Averta12]">Tổng nữ:<div class="px-[4px] text-[#9E2B25]">35</div>người</div>
+          </div>
+        </div>
+        <div class="w-3/12 h-auto">
+          <div class="flex">
+            <img src="assets/images/family_tree/dong_xu.png" class="w-[10px] h-[10px] mt-[7px] mr-[5px]" alt="">
+            <div class="flex text-black font-semibold text-base font-[Averta4] text-center">Đời 3:<div class="px-[4px] text-[#9E2B25]">163</div>người</div>
+          </div>
+          <div class="box-gender flex ml-[3px]">
+            <div class="w-1 h-1 bg-black rounded-full my-auto mr-[10px]"></div>
+            <div class="flex text-black font-normal text-base font-[Averta12]">Tổng nam:<div class="px-[4px] text-[#9E2B25]">103</div>người</div>
+          </div>
+          <div class="box-gender flex ml-[3px]">
+            <div class="w-1 h-1 bg-black rounded-full my-auto mr-[10px]"></div>
+            <div class="flex text-black font-normal text-base font-[Averta12]">Tổng nữ:<div class="px-[4px] text-[#9E2B25]">60</div>người</div>
+          </div>
+        </div>
+        <div class="w-3/12 h-auto">
+          <div class="flex">
+            <img src="assets/images/family_tree/dong_xu.png" class="w-[10px] h-[10px] mt-[7px] mr-[5px]" alt="">
+            <div class="flex text-black font-semibold text-base font-[Averta4] text-center">Đời 4:<div class="px-[4px] text-[#9E2B25]">226</div>người</div>
+          </div>
+          <div class="box-gender flex ml-[3px]">
+            <div class="w-1 h-1 bg-black rounded-full my-auto mr-[10px]"></div>
+            <div class="flex text-black font-normal text-base font-[Averta12]">Tổng nam:<div class="px-[4px] text-[#9E2B25]">70</div>người</div>
+          </div>
+          <div class="box-gender flex ml-[3px]">
+            <div class="w-1 h-1 bg-black rounded-full my-auto mr-[10px]"></div>
+            <div class="flex text-black font-normal text-base font-[Averta12]">Tổng nữ:<div class="px-[4px] text-[#9E2B25]">161</div>người</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+<!--  <div class="h-auto w-5/12 mx-auto">-->
+<!--    <app-tree-genealogy></app-tree-genealogy>-->
+<!--  </div>-->
   <app-table-view></app-table-view>
+
 </div>
