--- a/family-tree/src/app/module/header/header.component.html
+++ b/family-tree/src/app/module/header/header.component.html
@@ -8,7 +8,7 @@
         <div class="flex flex-col">
           <a [routerLink]="['home']" class="text-4xl text-[#A02D27] font-[500] hover:text-4xl">Trang chủ</a>
           <div *ngIf="navService.currentPage === pageEnum.home" class="pt-[5px]">
-            <img src="assets/images/underlined.png" width="65px" height="14px" alt="">
+            <img src="assets/images/underlined.png" class="mx-auto w-[65px] h-[14px]" alt="">
           </div>
         </div>
       </li>
@@ -16,7 +16,7 @@
         <div class="flex flex-col">
           <a [routerLink]="['about']" class="text-4xl text-[#A02D27] hover:text-4xl">Giới thiệu</a>
           <div *ngIf="navService.currentPage === pageEnum.about" class="pt-[5px]">
-            <img src="assets/images/underlined.png" width="61px" height="14px" alt="">
+            <img src="assets/images/underlined.png" class="mx-auto w-[65px] h-[14px]" alt="">
           </div>
         </div>
       </li>
@@ -24,7 +24,7 @@
         <div class="flex flex-col">
           <a [routerLink]="['familyTree']" class="text-4xl text-[#A02D27] hover:text-4xl">Gia phả</a>
           <div *ngIf="navService.currentPage === pageEnum.familyTree" class="pt-[5px]">
-            <img src="assets/images/underlined.png" width="47px" height="14px" alt="">
+            <img src="assets/images/underlined.png" class="mx-auto w-[55px] h-[14px]" alt="">
           </div>
         </div>
       </li>
@@ -32,7 +32,7 @@
         <div class="flex flex-col">
           <a [routerLink]="['news', 'all']" class="text-4xl text-[#A02D27] hover:text-4xl">Tin tức</a>
           <div *ngIf="navService.currentPage === pageEnum.news" class="pt-[5px]">
-            <img src="assets/images/underlined.png" width="48px" height="14px" alt="">
+            <img src="assets/images/underlined.png" class="mx-auto w-[55px] h-[14px]" alt="">
           </div>
         </div>
       </li>
@@ -40,7 +40,7 @@
         <div class="flex flex-col">
           <a [routerLink]="['contact']" class="text-4xl text-[#A02D27] hover:text-4xl">Liên hệ</a>
           <div *ngIf="navService.currentPage === pageEnum.contact" class="pt-[5px]">
-            <img src="assets/images/underlined.png" width="48px" height="14px" alt="">
+            <img src="assets/images/underlined.png" class="mx-auto w-[55px] h-[14px]" alt="">
           </div>
         </div>
       </li>
