--- a/family-tree/src/app/module/home/home.component.html
+++ b/family-tree/src/app/module/home/home.component.html
@@ -3,12 +3,11 @@
   <div class="random-image1" id="image1"></div>
   <div class="random-image2" id="image2"></div>
   <div class="random-image3" id="image3"></div>
-  <div class="box-img-introduce w-[1400px] h-auto">
+  <div class="box-img-introduce w-auto h-auto">
     <div
-      class="box-introduce w-[1100px] px-[72px] mx-auto mt-[80px] rounded-[20px] py-[40px]">
-      <img src="assets/images/image_banner/gioithieu.png" width="336px" height="129px" class="img-introduce mx-auto">
+      class="box-introduce w-8/12 px-[72px] mx-auto mt-[80px] rounded-[20px] py-[40px]">
+      <img src="assets/images/image_banner/gioithieu.png" class="img-introduce lg:w-[336px] lg:h-[129px] md:w-2/6 h-auto mx-auto">
       <img src="assets/images/image_banner/banner_introduce.png" class="img-introduce-bn w-full aspect-[1055/218] mt-[48px] mx-auto">
-
       <div class="title-introduce border border-[#FFFFFF] mx-auto mt-[20px] p-[20px]">
         <div class="text-2xl font-[600] text-white font-[Averta4] uppercase">HỌ Ngô Tam Sơn và đền thờ TN Ngô Miễn Thiệu</div>
         <div class="py-[10px]">
@@ -20,38 +19,36 @@
   </div>
 
   <div class="box-img-history w-full relative pt-[80px]">
-    <img class="top-img-history mx-auto" width="1317px" src="assets/images/image_banner/top_img_history.png">
-
-    <div class="box-history top-[150px] w-[1100px] px-[32px] mx-auto  rounded-[20px] pb-[40px] pt-[32px]">
-      <div class="border-history w-full pt-[32px] mx-auto">
-        <img src="assets/images/image_banner/history.png" width="336px" height="129px" class="img-history mx-auto">
-        <div class="title-history mx-auto p-[20px]">
+    <img class="top-img-history w-10/12 mx-auto" src="assets/images/image_banner/top_img_history.png">
+    <div class="box-history top-[150px] w-8/12 px-[32px] mx-auto rounded-[20px] pb-[40px] pt-[32px]">
+      <div class="border-history pt-[32px]">
+        <img src="assets/images/image_banner/history.png" class="img-history lg:w-[400px] lg:h-[129px] w-3/4 h-auto mx-auto">
+        <div class="title-history mx-auto py-[30px] px-[40px]">
           <div class="text-2xl font-[600] text-white font-[Averta4] uppercase">Các họ đổi sang họ khác – Nguyên nhân và gốc tích</div>
           <div class="py-[10px]">
             <p class="text-white py-2">Trong lịch sử tồn tại và phát triển, đặc biệt trong xã hội phong kiến, không ít dòng họ, chi họ Ngô đã đổi sang họ khác, ngược lại, một số họ khác đã đổi sang họ Ngô. </p>
           </div>
-          <div class="posts-history bg-white grid grid-rows grid-flow-col mb-[24px]">
-            <div class="row-span-2">
-              <img src="assets/images/history/history1.png" width="175px" height="111px" class="img-history px-3 py-3">
+          <div class="posts-history flex bg-white mb-[24px]">
+            <div class="w-3/12 h-auto">
+              <img src="assets/images/history/history1.png" class="img-history px-4 py-4">
             </div>
-            <div class="col-span-2">
+            <div class="w-9/12 h-auto pt-[15px]">
               <p class="text-black font-semibold text-2xl font-[Averta4]">Lược sử Phúc quang Từ đường & bài ký của Hà Tông Huân</p>
               <p class="col-span-2 text-black text-sm">Thứ tư - 14/01/2015 09:10</p>
-              <p class="row-span-2 col-span-1 text-black text-base">
+              <p class="row-span-2 col-span-1 text-black text-base pr-[40px]">
                 {{contentHistory}} <a *ngIf="show">{{addContent}}</a>
                 <button (click)="toggleContentHistory()" class="font-semibold">{{show ? ' Ẩn bớt' : '...Xem thêm'}}</button>
               </p>
             </div>
           </div>
-
-          <div class="posts-history bg-white grid grid-rows grid-flow-col">
-            <div class="row-span-2">
-              <img src="assets/images/history/history2.png" width="175px" height="111px" class="img-history px-3 py-3">
+          <div class="posts-history flex bg-white mb-[24px]">
+            <div class="w-3/12 h-auto">
+              <img src="assets/images/history/history2.png" class="img-history px-4 py-4">
             </div>
-            <div class="col-span-2">
+            <div class="w-9/12 h-auto pt-[15px]">
               <p class="text-black font-semibold text-2xl font-[Averta4]">Lược sử Phúc quang Từ đường & bài ký của Hà Tông Huân</p>
               <p class="col-span-2 text-black text-sm">Thứ tư - 14/01/2015 09:10</p>
-              <p class="row-span-2 col-span-1 text-black text-base font-normal ">{{contentHistory2}} <a *ngIf="show2">{{addContent2}}</a><button (click)="toggleContentHistory2()" class="font-semibold">{{show2 ? ' Ẩn bớt' : '...Xem thêm'}}</button></p>
+              <p class="row-span-2 col-span-1 text-black text-base font-normal pr-[40px]">{{contentHistory2}} <a *ngIf="show2">{{addContent2}}</a><button (click)="toggleContentHistory2()" class="font-semibold">{{show2 ? ' Ẩn bớt' : '...Xem thêm'}}</button></p>
             </div>
           </div>
         </div>
@@ -60,8 +57,8 @@
   </div>
 
   <div class="box-img-introduce w-full relative">
-    <div class="box-introduce w-[1100px] px-[72px] mx-auto mt-[80px] rounded-[20px] py-[40px]">
-      <img src="assets/images/image_banner/businessmen.png" width="336px" height="129px" class="img-introduce mx-auto">
+    <div class="box-introduce w-8/12 px-[72px] mx-auto mt-[80px] rounded-[20px] py-[40px]">
+      <img src="assets/images/image_banner/businessmen.png" class="img-introduce lg:w-[400px] lg:h-[129px] w-3/4 mx-auto">
       <div class="grid grid-cols-3 gap-4 py-[48px]">
         <div class="mx-auto">
           <img src="assets/images/ong_ngo_linh_ngoc.png" width="200px" height="200px" class="img-introduce mx-auto">
@@ -95,8 +92,8 @@
   </div>
 
   <div class="box-img-news w-full relative">
-    <div class="box-news w-[1100px] px-[72px] py-[40px] mx-auto mt-[40px] rounded-[20px]">
-      <img src="assets/images/image_banner/logo_news.png" width="336px" height="129px" class="img-introduce mx-auto pt-[178px]">
+    <div class="box-news w-8/12 px-[72px] mx-auto mt-[80px] rounded-[20px] pt-[170px] pb-[40px]">
+      <img src="assets/images/image_banner/logo_news.png" class="img-introduce lg:w-[400px] lg:h-[129px] 3/4 mx-auto ">
       <div class="pt-[40px]">
         <carousel-component></carousel-component>
       </div>
@@ -104,16 +101,21 @@
   </div>
 
   <div class="box-video w-full relative">
-    <div class="box-img-video w-[1100px] px-[72px] mx-auto mt-[40px] rounded-[20px] py-[40px]">
-      <img src="assets/images/video/video.png" width="336px" height="129px" class="img-introduce mx-auto">
-      <iframe width="560px" height="315px" src="https://www.youtube.com/embed/TTyDNCyoUeY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <div class="box-img-video w-8/12 px-[72px] mx-auto mt-[40px] rounded-[20px] pb-[40px]">
+      <img src="assets/images/video/video.png" class="img-introduce lg:w-[336px] lg:h-full w-3/4 mx-auto pt-[40px]">
+      <div class="flex pb-[50px] py-[30px]">
+        <div class="w-8/12 h-auto mx-auto pr-[30px]">
+          <iframe class="w-full h-[378px]" src="https://www.youtube.com/embed/TTyDNCyoUeY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen> </iframe>
+        </div>
+        <div [innerHTML]="listTest" class="w-6/12 h-auto"></div>
+      </div>
     </div>
   </div>
 
   <div class="box-recent-posts w-full relative">
-    <div class="box-img-recent-posts w-[1100px] px-[72px] py-[40px] mx-auto my-[40px] rounded-[20px]">
-      <img src="assets/images/image_banner/img.png" width="336px" height="129px" class="img-introduce mx-auto pt-[178px]">
-      <div class="pt-[40px]">
+    <div class="box-img-recent-posts w-8/12 px-[72px] mx-auto mt-[80px] rounded-[20px] py-[170px] pb-[150px]">
+      <img src="assets/images/image_banner/img.png" class="img-introduce lg:w-[400px] lg:h-[129px] 3/4 mx-auto">
+      <div class="pt-[40px] h-full">
         <recent-posts-carousel></recent-posts-carousel>
       </div>
     </div>
