--- a/family-tree/src/app/module/introduce/introduce.component.html
+++ b/family-tree/src/app/module/introduce/introduce.component.html
@@ -1,7 +1,7 @@
 <div class="box-image px-[72px] mx-auto">
   <div class="random-image1" id="image1"></div>
   <div class="random-image3" id="image3"></div>
-  <img src="assets/images/about/about_banner.png" width="100%" height="373px" alt="">
+  <img src="assets/images/about/about_banner.png" class="w-10/12 mx-auto" alt="">
 
   <div class="box-general-introduction flex flex-row w-[1100px] h-[439px] px-[22px] mx-auto mt-[80px] py-[20px]">
     <div class="basis-1/2 my-auto">
