--- a/family-tree/src/app/module/news/news.component.html
+++ b/family-tree/src/app/module/news/news.component.html
@@ -1,7 +1,7 @@
 <div class="box-image px-[72px] mx-auto">
-  <img src="assets/images/news/banner_news.png" width="100%" height="373px" alt="">
+  <img src="assets/images/news/banner_news.png" class="w-10/12 mx-auto" alt="">
 
-  <div class="pt-[48px] px-[22px]">
+  <div class="pt-[48px] pl-[60px] mx-auto w-10/12">
     <ul class="flex">
       <li class="mr-[60px]">
         <div class="flex flex-row">
