--- a/family-tree/src/app/table-view/table-view.component.html
+++ b/family-tree/src/app/table-view/table-view.component.html
@@ -8,7 +8,7 @@
     </tr>
     </thead>
     <tbody>
-    <tr *ngFor="let row of csvData; let i = index">
+    <tr *ngFor="let row of filteredData; let i = index">
       <ng-container *ngFor="let header of headers" >
         <td [class.border-b]="i > 0">{{ row[header] }}</td>
       </ng-container>
