--- a/family-tree/src/app/module/detail-posts/detail-posts.component.scss
+++ b/family-tree/src/app/module/detail-posts/detail-posts.component.scss
@@ -8,7 +8,6 @@ $top-distance: 800px;
     height: 760px;
     right: 20px;
     top: $top-distance;
-    //background-position: top right;
   }
   .random-image3 {
     position: absolute;
@@ -19,7 +18,6 @@ $top-distance: 800px;
     left: 20px;
     top: $top-distance * 4;
     mix-blend-mode: darken;
-    //background-position: top right;
   }
   .form-comment{
     .input-comment span{
@@ -74,18 +72,16 @@ $top-distance: 800px;
         }
       }
       .gradient-button{
-        background-image: linear-gradient(180deg, #F4CFA5 0%, #F6BA73 100%); /* Thay đổi màu sắc tùy ý */
-        padding: 10px 20px; /* Điều chỉnh padding theo nhu cầu */
-        border: none; /* Loại bỏ đường viền */
-        border-radius: 5px; /* Bo góc nút */
-        cursor: pointer; /* Hiển thị con trỏ tay khi di chuột qua nút */
+        background-image: linear-gradient(180deg, #F4CFA5 0%, #F6BA73 100%);
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
       }
     }
   }
   .mat-icon{
-    //background: aqua;
     font-size: 20px;
-    //line-height: 24px;
     align-items: center;
     justify-content: center;
     color: #9D9D9D;
@@ -109,8 +105,8 @@ $top-distance: 800px;
             color: #9E2B25;
           }
           a:hover {
-            color: #9E2B25; /* Màu bạn muốn áp dụng khi di chuột qua */
-            text-decoration: underline; /* Thêm gạch chân vào liên kết */
+            color: #9E2B25;
+            text-decoration: underline;
           }
         }
       }
