--- a/family-tree/src/styles.scss
+++ b/family-tree/src/styles.scss
@@ -2,7 +2,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
 @font-face {
   font-family: "Ambrosia";
   src: local("Ambrosia"), url("./assets/fonts/UTM-Ambrosia.ttf") format("truetype");
@@ -83,8 +84,8 @@
 //
 body {
   //font-family: Averta1;
-}
 
+}
 
 //html, body { height: 100%; }
 //body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
